--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
   <string name="app_name">Locatr</string>
+  <string name="action_settings">Настройки</string>
+  <string name="search">Find an image near you</string>
 </resources>
